Сделал глобальные стили ( они не работают )

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -1,1 +1,7 @@
-// Начните писать стили здесь
+@import "global/global.scss";
+@import "global/visually-hidden.scss";
+@import "global/body.scss";
+@import "global/button.scss";
+@import "global/list-reset.scss";
+@import "global/fonts.scss";
+@import "global/variables.scss";
