--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -1,12 +1,11 @@
 .button {
   display: inline-flex;
-  color: $basic-blue-light;
+  color: $basic-white;
   font-family: $font;
   align-items: center;
   justify-content: center;
-  font-size: 18px;
+  font-size: 14px;
   font-style: normal;
-  font-weight: 700;
   line-height: 18px;
   border: none;
   border-radius: 0;
