--- a/source/sass/global/body.scss
+++ b/source/sass/global/body.scss
@@ -1,8 +1,8 @@
 .body {
   margin: 0;
-  font-family: Arial;
-  font-size: 16px;
+  font-family: $font-basic;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 18px;
 }
