--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,12 +1,14 @@
 $basic-green:#68b738;
+$basic-white: #ffffff;
 $basic-grey: #f2f2f2;
 $special-grey: #cdcdcd;
 $special-grey-2: #666666;
 $special-dark-grey: #444444;
 $special-dark-grey: #222222;
 
-$font: "Blogger Sans", "Arial", "Helvetica", sans-serif;
+$font: "Oswald", "Arial", sans-serif;
+$font-basic: "Arial", sans-serif;
 
 $tablet-width: 768px;
-$desktop-width: 1220px; //TODO Правильно?
+$desktop-width: 1280px;
 $mobile-width-only: 767px;
