--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,3 +5,23 @@
 @import "global/body.scss";
 @import "global/button.scss";
 @import "global/list-reset.scss";
+@import "block/navigation.scss";
+@import "block/greetings.scss";
+@import "block/for-what.scss";
+@import "block/work.scss";
+@import "block/example.scss";
+@import "block/range.scss";
+@import "block/contacts.scss";
+@import "block/adress.scss";
+@import "block/footer.scss";
+@import "block/socials.scss";
+@import "block/selection.scss";
+@import "block/form.scss";
+@import "block/text-field.scss";
+@import "block/radio-item.scss";
+@import "block/checkbox-item.scss";
+@import "block/catalog.scss";
+@import "block/products.scss";
+@import "block/compound.scss";
+@import "block/additional-items.scss";
+@import "block/addition.scss";
