--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -6,6 +6,7 @@
 @import "global/button.scss";
 @import "global/list-reset.scss";
 @import "block/navigation.scss";
+@import "block/header.scss";
 @import "block/greetings.scss";
 @import "block/for-what.scss";
 @import "block/work.scss";
@@ -25,3 +26,4 @@
 @import "block/compound.scss";
 @import "block/additional-items.scss";
 @import "block/addition.scss";
+@import "block/description.scss";
