--- a/source/sass/block/catalog.scss
+++ b/source/sass/block/catalog.scss
@@ -4,4 +4,15 @@
     font-size: 36px;
     line-height: 36px;
   }
+
+  &__list {
+    @media (min-width: $tablet-width) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+    }
+
+    @media (min-width: $desktop-width) {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+    }
+  }
 }
