--- a/source/sass/block/example.scss
+++ b/source/sass/block/example.scss
@@ -1,10 +1,12 @@
 .example {
   background-color: $special-grey-3;
+  padding: 25px 0 40px;
 
   &__title {
     font-family: $font;
     font-size: 36px;
     line-height: 40px;
     text-align: center;
+    font-weight: 400;
   }
 }
