--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -12,6 +12,7 @@
   padding: 0;
   background-color: $basic-green;
   text-transform: uppercase;
+  font-weight: 400;
 
   &--secondary {
     background-color: $basic-grey;
