--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -1,10 +1,11 @@
 $basic-green:#68b738;
 $basic-white: #ffffff;
 $basic-grey: #f2f2f2;
-$basic-grey-2: #C4C4C4;
+$basic-grey-2: #c4c4c4;
+$basic-grey-3: #d9d9d9;
 $special-grey: #cdcdcd;
 $special-grey-2: #666666;
-$special-grey-3: #EAEAEA;
+$special-grey-3: #eaeaea;
 $special-dark-grey: #444444;
 $special-dark-grey-2: #222222;
 $basic-black: #000000;
