--- a/source/sass/block/description.scss
+++ b/source/sass/block/description.scss
@@ -3,6 +3,20 @@
   flex-wrap: wrap;
 
   &__box {
+    margin-top: 20px;
+    border: 1px solid $special-grey;
+    border-radius: 3px;
+    position: relative;
+    height: 56px;
+    width: 124px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    & + & {
+      margin-left: 32px;
+    }
+
     @media (min-width: $tablet-width) {
       width: 162px;
     }
@@ -12,15 +26,21 @@
     font-family: $font;
     font-size: 24px;
     line-height: 24px;
-    text-align: center;
     text-transform: uppercase;
   }
 
   &__thin {
+    background-color: $special-grey-3;
     color: $basic-grey-2;
     font-size: 12px;
     line-height: 12px;
     text-align: center;
+    position: absolute;
+    top: 46px;
+    left: 18px;
+    width: 87px;
+    height: 24px;
+    padding: 0 14px;
   }
 
   &__total {
@@ -28,5 +48,12 @@
     line-height: 20px;
     text-align: center;
     text-transform: uppercase;
+    margin-top: 34px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  &__subtitle {
+    margin-top: 40px;
   }
 }
