--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -1,11 +1,27 @@
 .footer {
   background-color: $basic-grey;
+  max-width: 1280px;
+  padding: 39px 20px 22px;
+
+  &__logo-link {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 32px;
+  }
 
   &__socials {
     display: flex;
+    justify-content: center;
+    margin-bottom: 22px;
   }
 
   @media (min-width: $tablet-width) {
     display: flex;
+  }
+
+  &__developed {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
   }
 }
