--- a/source/sass/block/for-what.scss
+++ b/source/sass/block/for-what.scss
@@ -1,6 +1,22 @@
 .for-what {
+  padding: 20px 0;
+
   &__item {
     background-color: $basic-grey;
+    padding: 24px 33px 22px 20px;
+
+    & + & {
+      margin-top: 20px;
+
+      @media (min-width: $tablet-width) {
+        margin-top: 30px;
+      }
+
+      @media (min-width: $desktop-width) {
+        margin-top: 0px;
+        margin-left: 80px;
+      }
+    }
   }
 
   &__title {
@@ -8,6 +24,15 @@
     font-size: 24px;
     line-height: 37px;
     text-transform: uppercase;
+    font-weight: 400;
+    margin-top: 6px;
+  }
+
+  &__text {
+    margin-top: 22px;
+    padding-bottom: 23px;
+    border-bottom: 1px solid $basic-grey-3;
+    margin-bottom: 15px;
   }
 
   &__link {
@@ -17,6 +42,19 @@
     text-align: center;
     color: $basic-black;
     text-transform: uppercase;
+    display: flex;
+    vertical-align: middle;
+
+    &::after {
+      content: "";
+      width: 24px;
+      height: 12px;
+      background-image: url("../../img/arrow.svg");
+      display: inline-block;
+      vertical-align: middle;
+      background-size: cover;
+      margin-left: 17px;
+    }
   }
 
   &__list {
