--- a/source/sass/block/header.scss
+++ b/source/sass/block/header.scss
@@ -1,6 +1,14 @@
 .header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  max-width: 1280px;
+  padding: 0 20px;
+  height: 60px;
+
+  @media (min-width: $tablet-width) {
+    padding: 0 30px;
+  }
 
   &__img-text {
     @media (min-width: $tablet-width) {
