--- a/source/sass/block/text-field.scss
+++ b/source/sass/block/text-field.scss
@@ -11,5 +11,14 @@
     font-size: 16px;
     text-transform: uppercase;
     color: $special-dark-grey;
+    background-color: transparent;
+
+    &--textarea {
+      resize: none;
+    }
+
+    &::placeholder {
+      color: $special-dark-grey;
+    }
   }
 }
