--- a/source/sass/block/work.scss
+++ b/source/sass/block/work.scss
@@ -1,23 +1,37 @@
 .work {
+  padding-bottom: 49px;
   &__title {
     font-family: $font;
     font-size: 36px;
     line-height: 40px;
-    text-align: center;
+    font-weight: 400;
+    margin-bottom: 40px;
+
   }
 
   &__item {
-    border: 2px solid red; //Чтобы было легче проверить
+    margin-bottom: 20px;
+    display: flex;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 0;
+    }
+
+    &:last-child {
+      margin-bottom: 0;
+    }
   }
 
   &__list {
     @media (min-width: $tablet-width) {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      gap: 60px;
     }
 
     @media (min-width: $desktop-width) {
-      display: flex; //что то я не додумался как на гридах сделать
+      grid-template-columns: repeat(4, 1fr);
+      gap: 60px 80px;
     }
   }
 }
