--- a/source/sass/block/example.scss
+++ b/source/sass/block/example.scss
@@ -2,11 +2,21 @@
   background-color: $special-grey-3;
   padding: 25px 0 40px;
 
+  @media (min-width: $tablet-width) {
+    background-color: $basic-white;
+  }
+
   &__title {
     font-family: $font;
     font-size: 36px;
     line-height: 40px;
     text-align: center;
     font-weight: 400;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+      text-align: left;
+    }
   }
 }
