--- a/source/sass/block/adress.scss
+++ b/source/sass/block/adress.scss
@@ -1,6 +1,19 @@
 .adress {
   display: flex;
+  justify-content: space-between;
   padding: 26px 20px 26px;
+
+  @media (min-width: $desktop-width) {
+    width: 565px;
+    position: absolute;
+    top: 95px;
+    left: 110px;
+    background-color: $basic-white;
+  }
+
+  @media (min-width: $tablet-width) {
+    padding: 56px 70px;
+  }
 
   &__title {
     font-family: $font;
@@ -8,10 +21,21 @@
     line-height: 20px;
     text-transform: uppercase;
     font-weight: 400;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 26px;
+      width: 172px;
+    }
   }
 
   &__text {
     line-height: 20px;
     color: $special-dark-grey;
+
+    @media (min-width: $tablet-width) {
+      width: 160px;
+      text-align: right; //TODO Как тут сделать такой большой пробел?
+    }
   }
 }
