--- a/source/sass/block/contacts.scss
+++ b/source/sass/block/contacts.scss
@@ -1,8 +1,3 @@
 .contacts {
-  &__title {
-    font-family: $font;
-    font-size: 16px;
-    line-height: 20px;
-    text-transform: uppercase;
-  }
+  position: relative;
 }
