--- a/source/sass/block/description.scss
+++ b/source/sass/block/description.scss
@@ -15,10 +15,15 @@
 
     & + & {
       margin-left: 32px;
+
+      @media (min-width: $tablet-width) {
+        margin-left: 42px;
+      }
     }
 
     @media (min-width: $tablet-width) {
       width: 162px;
+      height: 72px;
     }
   }
 
@@ -27,6 +32,11 @@
     font-size: 24px;
     line-height: 24px;
     text-transform: uppercase;
+
+    @media (min-width: $tablet-width) {
+      font-size: 30px;
+      line-height: 37px;
+    }
   }
 
   &__thin {
@@ -41,6 +51,15 @@
     width: 87px;
     height: 24px;
     padding: 0 14px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 14px;
+      line-height: 14px;
+      width: 127px;
+      padding: 0;
+      top: 62px;
+      background-color: $basic-white;
+    }
   }
 
   &__total {
@@ -51,6 +70,14 @@
     margin-top: 34px;
     margin-left: auto;
     margin-right: auto;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 20px;
+      width: 175px;
+      text-align: left;
+      margin-right: 0;
+    }
   }
 
   &__subtitle {
