--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -3,6 +3,11 @@
   max-width: 1280px;
   padding: 39px 20px 22px;
 
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+  }
+
   &__logo-link {
     display: flex;
     justify-content: center;
@@ -15,13 +20,13 @@
     margin-bottom: 22px;
   }
 
-  @media (min-width: $tablet-width) {
-    display: flex;
-  }
-
   &__developed {
     display: flex;
     align-items: center;
     justify-content: space-between;
+
+    @media (min-width: $tablet-width) {
+      width: 163px;
+    }
   }
 }
