--- a/source/sass/block/work.scss
+++ b/source/sass/block/work.scss
@@ -7,6 +7,10 @@
     font-weight: 400;
     margin-bottom: 40px;
 
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+    }
   }
 
   &__item {
