--- a/source/sass/global/body.scss
+++ b/source/sass/global/body.scss
@@ -5,4 +5,9 @@
   font-style: normal;
   font-weight: 400;
   line-height: 18px;
+
+  @media (min-width: $tablet-width) {
+    font-size: 16px;
+    line-height: 24px;
+  }
 }
