--- a/source/sass/global/button.scss
+++ b/source/sass/global/button.scss
@@ -14,6 +14,11 @@
   text-transform: uppercase;
   font-weight: 400;
 
+  @media (min-width: $tablet-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
+
   &--secondary {
     background-color: $basic-grey;
     color: $special-dark-grey;
