Мобильная версия каталога

--- a/source/sass/block/additional-items.scss
+++ b/source/sass/block/additional-items.scss
@@ -7,16 +7,23 @@
     font-family: $font;
     font-size: 24px;
     line-height: 24px;
-    text-align: center;
+    font-weight: 400;
   }
 
   &__present {
-    background-color: $basic-green;
+    background-image: url("../../img/cat-in-backpack.png");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 280px;
+    height: 290px;
   }
 
   &__sentence {
     font-size: 16px;
     line-height: 20px;
     color: $basic-white;
+    width: 161px;
+    text-align: center;
+    margin: 0 auto;
   }
 }
