--- a/source/sass/block/products.scss
+++ b/source/sass/block/products.scss
@@ -17,6 +17,9 @@
     line-height: 20px;
     text-transform: uppercase;
     color: $basic-black;
+    width: 76px;
+    margin-right: auto;
+    font-weight: 400;
   }
 
   &__text {
