--- a/source/sass/block/addition.scss
+++ b/source/sass/block/addition.scss
@@ -1,4 +1,5 @@
 .addition {
+  margin: 13px 0 19px 0;
   @media (min-width: $tablet-width) {
     display: flex;
   }
@@ -9,6 +10,7 @@
     line-height: 16px;
     color: $special-dark-grey;
     text-transform: uppercase;
+    margin-bottom: 13px;
   }
 
   &__text {
@@ -18,5 +20,12 @@
 
   &__compound {
     display: flex;
+    justify-content: space-between;
+    margin-bottom: 15px;
+  }
+
+  &__button {
+    width: 100%;
+    height: 40px;
   }
 }
