--- a/source/sass/block/form.scss
+++ b/source/sass/block/form.scss
@@ -9,11 +9,17 @@
     font-family: $font;
     font-size: 24px;
     line-height: 26px;
+    font-weight: 400;
   }
 
-  &__additional {
+  &__additionally {
     line-height: 16px;
     text-align: center;
+  }
+
+  &__button {
+    width: 100%;
+    height: 40px;
   }
 
   &__list {
