--- a/source/sass/block/text-field.scss
+++ b/source/sass/block/text-field.scss
@@ -1,17 +1,30 @@
 .text-field {
+  height: 45px;
+  display: flex;
+  align-items: center;
+
+  & + & {
+    margin-top: 14px;
+  }
+
   &__label {
     font-family: $font;
     font-size: 16px;
     text-transform: uppercase;
     color: $special-dark-grey;
+    font-weight: 400;
+    margin-right: 10px;
   }
 
   &__input {
     font-family: $font;
+    padding-left: 16px;
     font-size: 16px;
     text-transform: uppercase;
     color: $special-dark-grey;
     background-color: transparent;
+    font-weight: 400;
+    border: 1px solid $special-dark-grey-3; //TODO Пожалйуста, подскажи как можно сделать длину инпута до упора, я что то не могу догнать
 
     &--textarea {
       resize: none;
