--- a/source/sass/global/variables.scss
+++ b/source/sass/global/variables.scss
@@ -8,6 +8,7 @@ $special-grey-2: #666666;
 $special-grey-3: #eaeaea;
 $special-dark-grey: #444444;
 $special-dark-grey-2: #222222;
+$special-dark-grey-3: #E7E7E7;
 $basic-black: #000000;
 
 $font: "Oswald", "Arial", sans-serif;
