--- a/source/sass/block/catalog.scss
+++ b/source/sass/block/catalog.scss
@@ -7,7 +7,7 @@
     margin-bottom: 41px;
 
     @media (min-width: $tablet-width) {
-      //
+      margin-bottom: 0px;
     }
   }
 
@@ -15,6 +15,7 @@
     @media (min-width: $tablet-width) {
       display: grid;
       grid-template-columns: 1fr 1fr;
+      gap: 60px;
     }
 
     @media (min-width: $desktop-width) {
