--- a/source/sass/block/products.scss
+++ b/source/sass/block/products.scss
@@ -9,6 +9,10 @@
   @media (min-width: $tablet-width) {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 8px 38px 39px 38px;
+    background-color: $basic-grey;
   }
 
   &__title{
@@ -20,6 +24,13 @@
     width: 76px;
     margin-right: auto;
     font-weight: 400;
+
+    @media (min-width: $tablet-width) {
+      width: 120px;
+      text-align: center;
+      font-size: 20px;
+      line-height: 24px;
+    }
   }
 
   &__text {
@@ -35,18 +46,34 @@
     align-items: center;
     width: 140px;
     height: 112px;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 34px;
+    }
   }
 
   &__main-link {
     grid-area: B;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 21px;
+    }
   }
 
   &__compound {
     grid-area: C;
+
+    @media (min-width: $tablet-width) {
+      margin-bottom: 33px;
+    }
   }
 
   &__button {
     grid-area: D;
     height: 40px;
+
+    @media (min-width: $tablet-width) {
+      width: 100%;
+    }
   }
 }
