--- a/source/sass/block/compound.scss
+++ b/source/sass/block/compound.scss
@@ -9,6 +9,10 @@
     font-size: 16px;
   }
 
+  @media (min-width: $desktop-width) {
+    width: 169px;
+  }
+
   &__item {
     display: flex;
     justify-content: space-between;
