--- a/source/sass/block/products.scss
+++ b/source/sass/block/products.scss
@@ -15,6 +15,10 @@
     background-color: $basic-grey;
   }
 
+  @media (min-width: $desktop-width) {
+    padding: 1px 34px 39px 39px;
+  }
+
   &__title{
     font-family: $font;
     font-size: 16px;
@@ -30,6 +34,10 @@
       text-align: center;
       font-size: 20px;
       line-height: 24px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 130px;
     }
   }
 
@@ -50,12 +58,20 @@
     @media (min-width: $tablet-width) {
       margin-bottom: 34px;
     }
+
+    @media (min-width: $desktop-width) {
+      margin-bottom: 40px;
+    }
   }
 
   &__main-link {
     grid-area: B;
 
     @media (min-width: $tablet-width) {
+      margin-bottom: 21px;
+    }
+
+    @media (min-width: $desktop-width) {
       margin-bottom: 21px;
     }
   }
