--- a/source/sass/block/form.scss
+++ b/source/sass/block/form.scss
@@ -10,6 +10,11 @@
     font-size: 24px;
     line-height: 26px;
     font-weight: 400;
+
+    @media (min-width: $tablet-width) {
+      font-size: 36px;
+      line-height: 36px;
+    }
   }
 
   &__additionally {
@@ -20,6 +25,15 @@
   &__button {
     width: 100%;
     height: 40px;
+
+    @media (min-width: $tablet-width) {
+      width: 282px;
+      height: 52px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 568px;
+    }
   }
 
   &__list {
@@ -27,6 +41,7 @@
       @media (min-width: $tablet-width) {
         display: grid;
         grid-template-columns: 1fr 1fr;
+        gap: 32px;
       }
 
       @media (min-width: $desktop-width) {
@@ -44,6 +59,13 @@
   &__end {
     @media (min-width: $tablet-width) {
       display: flex;
+      justify-content: space-between;
+      align-items: center;
+      margin-top: 54px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 0;
     }
   }
 }
