--- a/source/sass/block/radio-item.scss
+++ b/source/sass/block/radio-item.scss
@@ -13,6 +13,11 @@
     font-size: 16px;
     text-transform: uppercase;
     font-weight: 400;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 30px;
+    }
   }
 
   &__input {
@@ -37,6 +42,11 @@
       background-repeat: no-repeat;
       background-position: center center;
       background-size: 50% 50%;
+
+      @media (min-width: $tablet-width) {
+        width: 40px;
+        height: 40px;
+      }
     }
   }
 
