--- a/source/sass/block/selection.scss
+++ b/source/sass/block/selection.scss
@@ -7,6 +7,11 @@
     line-height: 36px;
     font-weight: 400;
     margin-bottom: 37px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 60px;
+      line-height: 60px;
+    }
   }
 
   &__subtitle {
@@ -14,5 +19,11 @@
     text-transform: uppercase;
     width: 226px;
     margin-bottom: 39px;
+
+    @media (min-width: $tablet-width) {
+      font-size: 20px;
+      line-height: 30px;
+      width: 323px;
+    }
   }
 }
