--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -1,11 +1,13 @@
 .footer {
   background-color: $basic-grey;
-  max-width: 1280px;
-  padding: 39px 20px 22px;
 
-  @media (min-width: $tablet-width) {
-    display: flex;
-    justify-content: space-between;
+  &__container {
+    padding: 39px 0 22px;
+
+    @media (min-width: $tablet-width) {
+      display: flex;
+      justify-content: space-between;
+    }
   }
 
   &__logo-link {
