индекс мобайл ПП

--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -2,7 +2,7 @@
   background-color: $basic-grey;
 
   &__container {
-    padding: 39px 0 22px;
+    padding: 39px 20px 26px; //TODO Проверь пожалуйста, правильно ли тут по ПП?
 
     @media (min-width: $tablet-width) {
       display: flex;
@@ -13,16 +13,17 @@
   &__logo-link {
     display: flex;
     justify-content: center;
-    margin-bottom: 32px;
+    padding-bottom: 31px;
+    border-bottom: 1px solid $basic-grey-3;
   }
 
   &__socials {
-    display: flex;
-    justify-content: center;
-    margin-bottom: 22px;
+    margin: 17px auto 15px;
   }
 
   &__developed {
+    border-top: 1px solid $basic-grey-3;
+    padding-top: 18px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -30,5 +31,10 @@
     @media (min-width: $tablet-width) {
       width: 163px;
     }
+  }
+
+  &__text {
+    font-size: 16px;
+    line-height: 18px;
   }
 }
