--- a/source/sass/block/range.scss
+++ b/source/sass/block/range.scss
@@ -1,6 +1,6 @@
 .range {
-  width: 210px;
-  margin: 0 auto;
+  width: 200px;
+  margin: 20px auto 0;
 
   @media (min-width: $tablet-width) {
     width: 592px;
