--- a/source/sass/block/adress.scss
+++ b/source/sass/block/adress.scss
@@ -1,7 +1,7 @@
 .adress {
   display: flex;
   justify-content: space-between;
-  padding: 26px 20px 26px;
+  padding: 26px 20px 26px 20px;
 
   @media (min-width: $desktop-width) {
     width: 565px;
@@ -21,6 +21,7 @@
     line-height: 20px;
     text-transform: uppercase;
     font-weight: 400;
+    width: 139px;
 
     @media (min-width: $tablet-width) {
       font-size: 20px;
@@ -32,6 +33,7 @@
   &__text {
     line-height: 20px;
     color: $special-dark-grey;
+    width: 139px;
 
     @media (min-width: $tablet-width) {
       width: 160px;
