--- a/source/sass/block/for-what.scss
+++ b/source/sass/block/for-what.scss
@@ -1,5 +1,5 @@
 .for-what {
-  padding: 0 0 45px 0;
+  padding: 20px 0 20px 0;
 
   &__item {
     background-color: $basic-grey;
@@ -25,7 +25,32 @@
     line-height: 37px;
     text-transform: uppercase;
     font-weight: 400;
-    margin-top: 6px;
+    margin-top: 5px;
+
+    &::before {
+      content: "";
+      display: inline-block;
+      vertical-align: middle;
+      background-size: cover;
+    }
+
+    &--slim::before {
+      margin-top: -8px;
+      margin-left: 2px;
+      width: 50px;
+      height: 53px;
+      margin-right: 19px;
+      background-image: url("../../img/cat-slim.svg");
+    }
+
+    &--strong::before {
+      margin-top: -8px;
+      margin-left: -7px;
+      width: 67px;
+      height: 50px;
+      margin-right: 11px;
+      background-image: url("../../img/cat-strong.svg");
+    }
 
     @media (min-width: $tablet-width) {
       font-size: 36px;
@@ -37,7 +62,7 @@
     margin-top: 22px;
     padding-bottom: 23px;
     border-bottom: 1px solid $basic-grey-3;
-    margin-bottom: 15px;
+    margin-bottom: 19px;
 
     @media (min-width: $tablet-width) {
       border-bottom: none;
@@ -67,7 +92,8 @@
       display: inline-block;
       vertical-align: middle;
       background-size: cover;
-      margin-left: 17px;
+      margin-top: 1px;
+      margin-left: 15px;
 
       @media (min-width: $tablet-width) {
         margin: auto 0 auto 25px;
