--- a/source/sass/block/greetings.scss
+++ b/source/sass/block/greetings.scss
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
 
   &__container {
-    margin-top: 27px;
+    padding-top: 29px;
     position: relative;
   }
 
@@ -44,6 +44,7 @@
     text-align: center;
     color: $basic-white;
     text-transform: uppercase;
+    margin-bottom: 29px;
 
     @media (min-width: $tablet-width) {
       color: $basic-black;
@@ -56,11 +57,10 @@
   }
 
   &__banner {
-    margin-top: 29px;
+    display: block;
     margin: 0 auto;
 
     @media (min-width: $tablet-width) {
-      display: block;
       position: absolute;
       width: 709px;
       height: 609px;
@@ -77,9 +77,11 @@
   }
 
   &__link {
-    margin-top: 3px;
-    padding: 7px 0;
+    margin-top: 1px;
+    padding: 10px 0;
     width: 100%;
+    font-size: 14px;
+    
 
     @media (min-width: $tablet-width) {
       width: 224px;
