--- a/source/sass/block/for-what.scss
+++ b/source/sass/block/for-what.scss
@@ -1,6 +1,10 @@
 .for-what {
   padding: 20px 0 20px 0;
 
+  @media (min-width: $tablet-width) {
+    padding-top: 0;
+  }
+
   &__item {
     background-color: $basic-grey;
     padding: 24px 33px 22px 20px;
