--- a/source/sass/block/footer.scss
+++ b/source/sass/block/footer.scss
@@ -15,6 +15,10 @@
     justify-content: center;
     padding-bottom: 31px;
     border-bottom: 1px solid $basic-grey-3;
+
+    @media (min-width: $tablet-width) {
+      border-bottom: none;
+    }
   }
 
   &__socials {
@@ -30,6 +34,7 @@
 
     @media (min-width: $tablet-width) {
       width: 163px;
+      border-top: none;
     }
   }
 
