--- a/source/sass/block/for-what.scss
+++ b/source/sass/block/for-what.scss
@@ -36,6 +36,10 @@
       display: inline-block;
       vertical-align: middle;
       background-size: cover;
+
+      @media (min-width: $tablet-width) {
+        display:none
+      }
     }
 
     &--slim::before {
@@ -70,6 +74,27 @@
 
     @media (min-width: $tablet-width) {
       border-bottom: none;
+      width: 340px;
+      display: block; //TODO Пожалуйста, помоги сделать эту кошку правильно
+
+      &::after {
+        content: "";
+        display: inline-block;
+        vertical-align: middle;
+        background-size: cover;
+      }
+
+      &--slim::after {
+        width: 200px;
+        height: 211px;
+        background-image: url("../../img/cat-slim.svg");
+      }
+
+      &--strong::after {
+        width: 268px;
+        height: 200px;
+        background-image: url("../../img/cat-strong.svg");
+      }
     }
   }
 
