--- a/source/sass/block/map.scss
+++ b/source/sass/block/map.scss
@@ -3,6 +3,11 @@
     margin: 0 auto;
     display: block;
 
+    @media (min-width: $tablet-width) {
+      width: 768px;
+      height: 400px;
+    }
+
     @media (min-width: $desktop-width) {
       //
     }
