--- a/source/sass/block/work.scss
+++ b/source/sass/block/work.scss
@@ -17,11 +17,40 @@
   &__text {
     display: block;
     width: 200px;
+
+    @media (min-width: $tablet-width) {
+      width: 240px;
+      margin-top: 31px;
+      margin-bottom: 57px;
+    }
   }
 
   &__item {
     margin-bottom: 20px;
     display: flex;
+
+    @media (min-width: $tablet-width) {
+      outline: 1px solid red;
+      display: block;
+      background-repeat: no-repeat;
+      background-position: right;
+
+      &--leaf {
+        background-image: url(../../img/1.svg);
+      }
+
+      &--powder {
+        background-image: url(../../img/2.svg);
+      }
+
+      &--fork {
+        background-image: url(../../img/3.svg);
+      }
+
+      &--clock {
+        background-image: url(../../img/4.svg);
+      }
+    }
 
     &::before {
       content: "";
@@ -31,6 +60,11 @@
       height: 60px;
       background-color: $basic-green;
       margin-right: 20px;
+
+      @media (min-width: $tablet-width) {
+        width: 80px;
+        height: 80px;
+      }
     }
 
     &--leaf::before {
