--- a/source/sass/block/addition.scss
+++ b/source/sass/block/addition.scss
@@ -1,5 +1,5 @@
 .addition {
-  margin: 13px 0 19px 0;
+  padding: 13px 0 19px 0;
 
   @media (min-width: $tablet-width) {
     display: flex;
@@ -20,6 +20,7 @@
     color: $special-dark-grey;
     text-transform: uppercase;
     margin-bottom: 13px;
+    font-weight: 400;
 
     @media (min-width: $tablet-width) {
       font-size: 20px;
@@ -42,7 +43,7 @@
   &__compound {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 15px;
+    margin-bottom: 14px;
 
     @media (min-width: $tablet-width) {
       font-size: 16px;
