--- a/source/sass/block/catalog.scss
+++ b/source/sass/block/catalog.scss
@@ -1,10 +1,17 @@
 .catalog {
+  &__container {
+    padding: 0;
+  }
+
   &__title {
     font-family: $font;
     font-size: 36px;
     line-height: 36px;
     font-weight: 400;
     margin-bottom: 41px;
+    padding-left: 20px;
+    padding-top: 27px;
+    border-top: 1px solid $basic-grey-3;
 
     @media (min-width: $tablet-width) {
       margin-bottom: 0px;
@@ -21,6 +28,17 @@
     @media (min-width: $desktop-width) {
       grid-template-columns: 1fr 1fr 1fr 1fr;
       gap: 60px 80px;
+    }
+  }
+
+  &__item {
+    &:first-child{
+      border-top: 1px solid $basic-grey-3;
+      border-bottom: 1px solid $basic-grey-3;
+    }
+
+    & + & {
+      border-bottom: 1px solid $basic-grey-3;
     }
   }
 }
