--- a/source/sass/block/products-extra.scss
+++ b/source/sass/block/products-extra.scss
@@ -1,7 +1,18 @@
 .products-extra {
   display: flex;
   flex-direction: column;
-  padding: 19px 0 25px 0;
+  padding: 19px 20px 25px;
+
+  &::before {
+    content: "";
+    width: 30px;
+    height: 30px;
+    background-image: url("../../img/plus.svg");
+    display: inline-block;
+    vertical-align: middle;
+    background-size: cover;
+    margin: 5px auto 24px;
+  }
 
   &__title {
     text-align: center;
@@ -19,6 +30,6 @@
     line-height: 16px;
     color: $special-dark-grey;
     text-align: center;
-    margin-bottom: 21px;
+    margin-bottom: 8px;
   }
 }
