--- a/source/sass/block/catalog.scss
+++ b/source/sass/block/catalog.scss
@@ -1,6 +1,10 @@
 .catalog {
   &__container {
     padding: 0;
+
+    @media (min-width: $tablet-width) {
+      padding: 22px 30px 0;
+    }
   }
 
   &__title {
@@ -15,11 +19,15 @@
 
     @media (min-width: $tablet-width) {
       margin-bottom: 0px;
+      padding-left: 0;
+      font-size: 60px;
+      line-height: 60px;
     }
   }
 
   &__list {
     @media (min-width: $tablet-width) {
+      margin-top: 20px;
       display: grid;
       grid-template-columns: 1fr 1fr;
       gap: 60px;
