--- a/source/sass/block/adress.scss
+++ b/source/sass/block/adress.scss
@@ -12,7 +12,7 @@
   }
 
   @media (min-width: $tablet-width) {
-    padding: 56px 70px;
+    padding: 56px 70px 60px;
   }
 
   &__title {
@@ -27,6 +27,7 @@
       font-size: 20px;
       line-height: 26px;
       width: 172px;
+      padding-top: 5px;
     }
   }
 
@@ -37,7 +38,15 @@
 
     @media (min-width: $tablet-width) {
       width: 160px;
-      text-align: right; //TODO Как тут сделать такой большой пробел?
+      text-align: right;
+      display: flex;
+      flex-direction: column;
+    }
+  }
+
+  &__string + &__string {
+    @media (min-width: $tablet-width) {
+      padding-top: 20px;
     }
   }
 }
