--- a/source/sass/block/greetings.scss
+++ b/source/sass/block/greetings.scss
@@ -4,7 +4,7 @@
   background-repeat: no-repeat;
 
   &__container {
-    padding-top: 50px;
+    padding-top:28px;
     position: relative;
   }
 
@@ -24,15 +24,18 @@
     text-align: center;
     color: $basic-white;
     font-weight: 400;
+    max-width: 320px;
+    display: block;
+    margin: 0 auto;
 
     @media (min-width: $tablet-width) {
       color: $basic-black;
       font-size: 60px;
       line-height: 60px;
       text-align: left;
-      padding-left: 85px;
-      margin-bottom: 41px;
       width: 500px;
+      margin: 30px 0 41px 85px;
+      max-width: 415px;
     }
 
   }
@@ -79,7 +82,7 @@
   }
 
   &__link {
-    margin-top: 1px;
+    margin-top: 3px;
     padding: 10px 0;
     width: 100%;
     font-size: 14px;
