--- a/source/sass/block/header.scss
+++ b/source/sass/block/header.scss
@@ -1,19 +1,27 @@
 .header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  max-width: 1280px;
-  padding: 0 20px;
-  height: 65px;
+  &__container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    max-width: 1280px;
+    padding: 11px 20px;
 
-  @media (min-width: $tablet-width) {
-    margin-top: 26px;
-    padding: 0 30px;
+    @media (min-width: $tablet-width) {
+      margin-top: 24px;
+      padding: 0 30px;
+    }
   }
 
-  &__img-text {
+  &__logo {
     @media (min-width: $tablet-width) {
-      display: none;
+      width: 174px;
+      height: 52px;
+    }
+  }
+
+  &__navigation {
+    @media (min-width: $tablet-width) {
+      margin-top: 11px;
     }
   }
 }
