--- a/source/sass/block/map.scss
+++ b/source/sass/block/map.scss
@@ -2,9 +2,10 @@
   &__img {
     margin: 0 auto;
     display: block;
+    width: 100%;
+    height: 362px;
 
     @media (min-width: $tablet-width) {
-      width: 768px;
       height: 400px;
     }
 
