--- a/source/sass/block/socials.scss
+++ b/source/sass/block/socials.scss
@@ -4,10 +4,20 @@
   justify-content: space-between;
   align-items: center;
 
+  @media (min-width: $tablet-width) {
+    width: 160px;
+    padding: 0 0 0 24px;
+  }
 
   &__item {
     width: 30px;
     height: 30px;
+
+    @media (min-width: $tablet-width) {
+      width: 40px;
+      height: 40px;
+      background-size: 30px 30px;
+    }
   }
 
   &--vk {
@@ -20,6 +30,11 @@
     background-image: url("../../img/icon_instagram.svg");
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (min-width: $tablet-width) {
+      background-size: 24px 24px;
+    }
+
   }
 
   &--fc {
