--- a/source/sass/block/greetings.scss
+++ b/source/sass/block/greetings.scss
@@ -38,6 +38,11 @@
       max-width: 415px;
     }
 
+    @media (min-width: $desktop-width) {
+      margin-top: 80px;
+      margin-left: 80px;
+    }
+
   }
 
   &__slogan {
@@ -58,6 +63,11 @@
       margin-bottom: 49px;
       margin-left: 2px;
     }
+
+    @media (min-width: $desktop-width) {
+      padding-left: 78px;
+      margin-bottom: 50px;
+    }
   }
 
   &__banner {
@@ -76,8 +86,8 @@
     @media (min-width: $desktop-width) {
       width: 552px;
       height: 499px;
-      top: 0;
-      left: 558px;
+      top: 30px;
+      left: 490px;
     }
   }
 
@@ -95,6 +105,10 @@
       padding: 17px 10px;
       font-size: 20px;
       line-height: 20px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-left: 80px;
     }
   }
 }
