--- a/source/sass/block/header.scss
+++ b/source/sass/block/header.scss
@@ -10,12 +10,21 @@
       margin-top: 24px;
       padding: 0 30px;
     }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 50px;
+    }
   }
 
   &__logo {
     @media (min-width: $tablet-width) {
       width: 174px;
       height: 52px;
+    }
+
+    @media (min-width: $desktop-width) {
+      width: 202px;
+      height: 59px;
     }
   }
 
