--- a/source/sass/block/description.scss
+++ b/source/sass/block/description.scss
@@ -26,6 +26,10 @@
       height: 72px;
       margin-top: 52px;
     }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 64px;
+    }
   }
 
   &__bold {
@@ -81,10 +85,11 @@
       margin-top: 64px;
       display: flex;
       flex-direction: column;
-
     }
 
     @media (min-width: $desktop-width) {
+      flex-direction: row;
+      justify-content: space-between;
       width: 327px;
       text-align: center;
       margin-left: 0;
@@ -95,6 +100,11 @@
     @media (min-width: $tablet-width) {
       padding-top: 9px;
     }
+
+
+    @media (min-width: $desktop-width) {
+      padding-top: 0;
+    }
   }
 
   &__subtitle {
@@ -103,6 +113,13 @@
     @media (min-width: $tablet-width) {
       margin-top: 65px;
       padding-right: 15px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 150px;
+      width: 476px;
+      padding-right: 40px;
+      margin-right: auto;
     }
   }
 }
