--- a/source/sass/block/for-what.scss
+++ b/source/sass/block/for-what.scss
@@ -88,7 +88,7 @@
         width: 100px;
         height: 106px;
         margin-right: 62px;
-        margin-top: 0px;
+        margin-top: -3px;
       }
     }
 
@@ -104,7 +104,7 @@
         width: 134px;
         height: 100px;
         margin-right: 47px;
-        margin-top: 5px;
+        margin-top: -1px;
         margin-left: -20px;
       }
     }
@@ -112,6 +112,10 @@
     @media (min-width: $tablet-width) {
       font-size: 36px;
       line-height: 36px;
+    }
+
+    @media (min-width: $desktop-width) {
+      margin-top: 10px;
     }
   }
 
@@ -130,6 +134,8 @@
 
     @media (min-width: $desktop-width) {
       width: 467px;
+      margin-top: 41px;
+      margin-bottom: 0;
     }
   }
 
