--- a/source/sass/block/description.scss
+++ b/source/sass/block/description.scss
@@ -47,7 +47,7 @@
 
   &__thin {
     background-color: $special-grey-3;
-    color: $basic-grey-2;
+    color: $basic-black;
     font-size: 12px;
     line-height: 12px;
     text-align: center;
