--- a/source/sass/block/socials.scss
+++ b/source/sass/block/socials.scss
@@ -9,7 +9,8 @@
     padding: 0 0 0 24px;
   }
 
-  &__item {
+  &__socials {
+    display: block;
     width: 30px;
     height: 30px;
 
@@ -24,6 +25,10 @@
     background-image: url("../../img/icon_vkontakte.svg");
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (min-width: $desktop-width) {
+      background-size: 30px 30px;
+    }
   }
 
   &--in {
@@ -35,11 +40,18 @@
       background-size: 24px 24px;
     }
 
+    @media (min-width: $desktop-width) {
+      margin-left: 6px;
+    }
   }
 
   &--fc {
     background-image: url("../../img/icon_facebook.svg");
     background-position: center;
     background-repeat: no-repeat;
+
+    @media (min-width: $desktop-width) {
+      background-size: 30px 30px;
+    }
   }
 }
